--- a/list.html
+++ b/list.html
@@ -18,6 +18,7 @@
         <li>place</li>
         <li>address</li>
         <li>pincode</li>
+        <li>course</li>
     </ul>
     <h1>ordered list</h1>
     <ol type="i">
