--- a/kerala tourisum navigation bar.html
+++ b/kerala tourisum navigation bar.html
@@ -56,7 +56,7 @@
     <img src="idukki dam.jpg" height="300" width="300" alt="image not found"> 
     <img src="illikal kallu.jpg" height="300" width="300" alt="image not found">
     <p style="font-size: 20px;">Kerala, a state on India's tropical Malabar Coast, has nearly 600km of Arabian Sea shoreline. It's known for its palm-lined beaches and backwaters, a network of canals. Inland are the Western Ghats, mountains whose slopes support tea, coffee and spice plantations as well as wildlife. National parks like Eravikulam and Periyar, plus Wayanad and other sanctuaries, are home to elephants, langur monkeys and tigers</p>
-    
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam vero est, voluptatem adipisci eligendi illum eos nihil, corporis temporibus repellendus cupiditate maiores hic molestiae suscipit consectetur delectus in quo quae.</p>
 
 
 </body>
