--- a/navigation bar.html
+++ b/navigation bar.html
@@ -20,7 +20,7 @@
         }
         li a{
             display: block;
-            color: brown;
+            color: rgb(42, 151, 165);
             text-align: center;
             padding:14px 16px ;
             text-decoration: none;
