added futura html

--- a/futura web.html
+++ b/futura web.html
@@ -73,7 +73,7 @@
       }
       .text h1 {
         color: orange;
-        font-size: 60px;i
+        font-size: 60px;
       }
       .btn button {
          background-color: rgb(124, 10, 124);
